# easy-remote

./: .gitignore  Cargo.toml  README.md
assets/: com.github.RuanVasco.easy-remote.desktop  entries.xml
crates/easy-client/: Cargo.toml
crates/easy-client/assets/: com.github.RuanVasco.easy-client.desktop  com.github.RuanVasco.easy-remote.desktop
crates/easy-client/src/: config.rs  main.rs  ui.rs
crates/easy-client/src/model/: error.rs
crates/easy-client/src/service/: capture.rs  mod.rs  webrtc.rs
crates/easy-client/src/ui/: linux.rs  windows.rs
crates/easy-core/src/model/: vnc_connection.rs
crates/easy-tech/: Cargo.toml
crates/easy-tech/src/: main.rs
src/: config.rs  main.rs  ui.rs
src/model/: mod.rs  vnc_connection.rs
src/service/: mod.rs  vnc_launcher.rs
